{
    "name": "Controls",
    "maps": [
        {
            "name": "Turret",
            "id": "b151df16-7cdc-440d-9bfa-294a54334247",
            "actions": [
                {
                    "name": "ShootL",
                    "type": "Button",
                    "id": "165bc0bf-90b9-40b8-8db0-55fcf87d4058",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootR",
                    "type": "Button",
                    "id": "4f6a2ce2-1fe3-410b-8229-d63d5e00284a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "e120ca4f-3dcd-4366-ab25-7403e45dc370",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f703c12a-594a-4e07-b8a1-5cfb7e769bec",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e617e4cc-0538-41a5-ab85-b1b344a2bca8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80ff8b11-02bd-43c5-938e-651a40bfbf6a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Placement",
            "id": "93deb812-9505-48e3-9b83-23ccc2d9c67a",
            "actions": [
                {
                    "name": "Place",
                    "type": "Button",
                    "id": "b2e60ffc-e477-4e2f-928d-3c94f0d31862",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "acc89fd6-57f4-4b89-b8d8-efdc8723de2e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6de83675-ecc0-4d3f-9bba-30de7d0d8f96",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "084c6a81-fda5-4625-80bc-847ef8a236bf",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "f18fe53d-7863-4147-aae4-873400d87eba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4975df2-17b2-4889-8efb-8afcb596df6b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Permanent",
            "id": "038dfce0-f73d-4680-98ee-a84b00e18745",
            "actions": [
                {
                    "name": "ChangeMode",
                    "type": "Value",
                    "id": "ac9e0974-604f-4968-b954-7855baa901db",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "0527abe1-a03f-4dd0-b8aa-ec84fad06d21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a662e8e-dcce-4752-9940-fa4efe8ef444",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Scroll",
                    "id": "9dfc5a46-22f2-4985-9d1e-9900c11a3e70",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Clamp(min=-1,max=1)",
                    "groups": "",
                    "action": "ChangeMode",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "24c85cf9-ca7a-402f-b976-39618cc092fd",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8f3df745-762c-4264-815d-06c5875f98a3",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}